[package]
name = "cmd_id_request_id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
kittycad = "0.3.1"
reqwest = "0.11.27"
reqwest-websocket = "0.3.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
